--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.2.4",
     "@mui/material": "^5.2.4",
     "@mui/styled-engine": "^5.2.4",
@@ -18,6 +19,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "gh-pages": "^3.2.3",
+    "materialui-pagination-component": "^1.1.12",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
